# cricketmodel

./: .gitignore  README.md  environment.yml  optuna_studies.db  pyproject.toml  test_implementation.py  train.py
archive/v1-hierarchical-dual-stream/: train.py
data/t20s_male_json/: README.txt
notebooks/: hp_search_colab.ipynb
notes/data-analysis/: 00-index.md  01-decomposition-reconstruction.md  02-systems-thinking-leverage.md  03-synthesis-and-analogy.md  04-derived-features-catalog.md  05-negative-contrastive-framing.md  06-layered-reasoning.md
notes/implementation/: 00-index.md  01-available-data.md  02-graph-structure.md  03-hierarchical-attention.md  04-temporal-attention.md  05-derived-vs-learned.md  06-llm-interpretability.md  07-live-data-contract.md  08-cold-start-embeddings.md
notes/model-architecture/: 01-architecture-overview.md  02-graph-structure.md  03-encoders.md  04-conv-layers.md  05-message-passing.md  06-readout-and-prediction.md  07-model-variants.md  08-features-reference.md  09-forward-pass-walkthrough.md  INDEX.md
notes/training-guides/: colab-guide.md  hp-tuning-guide.md  metrics-reference.md  runpod-guide.md  simulation-guide.md
notes/training-plan/: 00-variant-overview.md  01-hyperparameter-tuning.md  02-ablation-studies.md  03-metrics-and-monitoring.md  04-training-progression.md  05-troubleshooting.md  06-distributed-training.md  07-current-run-monitoring.md
notes/visualizations/: heterodata-graph.html  heterodata-visualization-plan.md
results/hp_search/: best_params.json
scripts/: hp_search.py  run_all_phases.sh  run_full_model_search.sh  run_joint_search.sh  setup.sh  train.sh  validate_dimensions.py  verify_install.py
src/: __init__.py  config.py
(+77 files in other folders)
