[project]
name = "cricketmodel"
version = "2.0.0"
description = "Cricket ball-by-ball prediction using heterogeneous graph neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0,<2.9",
    "torch-geometric>=2.7.0",
    "numpy>=1.24.0,<2",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
tracking = [
    "wandb",
]
llm = [
    "ollama>=0.2.0",
]
all = [
    "cricketmodel[dev,viz,tracking,llm]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
